jobs/OpenCOG_DebStab_AtomSpace.log
Started by user [8mha:////4L2jTPWu9zIb56dnp8RqVObesKKV2DVGI0jJXlam1DqAAAAAlx+LCAAAAAAAAP9b85aBtbiIQTGjNKU4P08vOT+vOD8nVc83PyU1x6OyILUoJzMv2y+/JJUBAhiZGBgqihhk0NSjKDWzXb3RdlLBUSYGJk8GtpzUvPSSDB8G5tKinBIGIZ+sxLJE/ZzEvHT94JKizLx0a6BxUmjGOUNodHsLgAzWEgZu/dLi1CL9xJTczDwAj6GcLcAAAAA=[0madmin
Building in workspace /var/lib/jenkins/workspace/OpenCOG_DebStab_AtomSpace
[OpenCOG_DebStab_AtomSpace] $ /bin/sh -xe /tmp/jenkins6841799786936109206.sh
+ COGDIR=../OpenCOG_DebStab
+ . ../OpenCOG_DebStab/build.docker/docker.env
+ CID=ea21195b72968f2d0074de82aab7207f85ffdbcde127cf3af9dc9d6919f4ed4d
+ DKRUNROOT=docker exec --user root   ea21195b72968f2d0074de82aab7207f85ffdbcde127cf3af9dc9d6919f4ed4d
+ DKRUNUSER=docker exec --user jenkins  ea21195b72968f2d0074de82aab7207f85ffdbcde127cf3af9dc9d6919f4ed4d
+ UID=125
+ GID=132
+ LOGFILE=/var/lib/jenkins/jobs/OpenCOG_DebStab_AtomSpace/builds/22/log
+ cat


**********************************************************
**********************************************************
**********************************************************
**********************************************************
*****                                                *****
*****                  Atomspace TEST                *****
*****                                                *****
**********************************************************
**********************************************************
**********************************************************
**********************************************************


+ echo GIT_COMMIT=
GIT_COMMIT=
+ echo GIT_BRANCH=
GIT_BRANCH=
+ echo GIT_URL=
GIT_URL=
+ WDIR=atomspace
+ JOBDIR=../OpenCOG_DebStab/dependencies
+ cat
+ chmod +x ../OpenCOG_DebStab/dependencies/job1
+ docker exec --user jenkins ea21195b72968f2d0074de82aab7207f85ffdbcde127cf3af9dc9d6919f4ed4d bash dependencies/job1
+ cd atomspace
+ cd build
+ make -j8 test
[  0%] Built target opencog_atom_types
[  1%] Built target truthvalue
[  3%] Built target atombase
[  5%] Built target attentionbank
[  5%] Built target atomutils
[ 13%] Built target atomcore
[ 14%] Built target clearbox
[ 15%] Built target atomspace
[ 16%] Generating TVMergeUTest.cpp
[ 16%] Generating EvidenceCountTruthValueUTest.cpp
[ 17%] Generating BetaReduceUTest.cpp
[ 17%] Generating AttentionValueUTest.cpp
[ 17%] Generating SimpleTruthValueUTest.cpp
[ 19%] Built target type_constructors
[ 20%] Built target atomspaceutils
[ 21%] Built target lambda
[ 22%] Generating DefineLinkUTest.cpp
[ 22%] Generating ComposeLinkUTest.cpp
[ 23%] Generating VariablesUTest.cpp
Scanning dependencies of target SimpleTruthValueUTest
Scanning dependencies of target EvidenceCountTruthValueUTest
Scanning dependencies of target BetaReduceUTest
Scanning dependencies of target AttentionValueUTest
Scanning dependencies of target TVMergeUTest
[ 23%] Building CXX object tests/atoms/CMakeFiles/BetaReduceUTest.dir/BetaReduceUTest.cpp.o
[ 23%] Building CXX object tests/truthvalue/CMakeFiles/AttentionValueUTest.dir/AttentionValueUTest.cpp.o
[ 23%] Building CXX object tests/truthvalue/CMakeFiles/SimpleTruthValueUTest.dir/SimpleTruthValueUTest.cpp.o
[ 23%] Building CXX object tests/truthvalue/CMakeFiles/TVMergeUTest.dir/TVMergeUTest.cpp.o
[ 23%] Building CXX object tests/truthvalue/CMakeFiles/EvidenceCountTruthValueUTest.dir/EvidenceCountTruthValueUTest.cpp.o
Scanning dependencies of target ComposeLinkUTest
Scanning dependencies of target VariablesUTest
Scanning dependencies of target DefineLinkUTest
[ 23%] Building CXX object tests/atoms/CMakeFiles/VariablesUTest.dir/VariablesUTest.cpp.o
[ 23%] Building CXX object tests/atoms/CMakeFiles/DefineLinkUTest.dir/DefineLinkUTest.cpp.o
[ 25%] Building CXX object tests/atoms/CMakeFiles/ComposeLinkUTest.dir/ComposeLinkUTest.cpp.o
[ 25%] Linking CXX executable EvidenceCountTruthValueUTest
[ 25%] Built target EvidenceCountTruthValueUTest
[ 26%] Linking CXX executable SimpleTruthValueUTest
[ 26%] Built target unify
[ 27%] Generating AtomSpaceUtilsUTest.cpp
Scanning dependencies of target AtomSpaceUtilsUTest
[ 27%] Building CXX object tests/atomspaceutils/CMakeFiles/AtomSpaceUtilsUTest.dir/AtomSpaceUtilsUTest.cpp.o
[ 27%] Built target SimpleTruthValueUTest
[ 27%] Generating AttentionUTest.cpp
Scanning dependencies of target AttentionUTest
[ 27%] Building CXX object tests/attentionbank/CMakeFiles/AttentionUTest.dir/AttentionUTest.cpp.o
[ 27%] Linking CXX executable TVMergeUTest
[ 27%] Built target TVMergeUTest
[ 27%] Built target atomspace_cython
[ 29%] Built target smob
[ 29%] Generating ThreadSafeHandleMapUTest.cpp
Scanning dependencies of target ThreadSafeHandleMapUTest
[ 29%] Building CXX object tests/atomspace/CMakeFiles/ThreadSafeHandleMapUTest.dir/ThreadSafeHandleMapUTest.cpp.o
[ 29%] Linking CXX executable DefineLinkUTest
[ 29%] Built target DefineLinkUTest
[ 29%] Linking CXX executable ComposeLinkUTest
[ 29%] Generating RemoveUTest.cpp
Scanning dependencies of target RemoveUTest
[ 29%] Building CXX object tests/atomspace/CMakeFiles/RemoveUTest.dir/RemoveUTest.cpp.o
[ 29%] Built target ComposeLinkUTest
[ 29%] Generating MultiSpaceUTest.cpp
Scanning dependencies of target MultiSpaceUTest
[ 29%] Linking CXX executable BetaReduceUTest
[ 29%] Building CXX object tests/atomspace/CMakeFiles/MultiSpaceUTest.dir/MultiSpaceUTest.cpp.o
[ 29%] Built target BetaReduceUTest
[ 29%] Generating NodeUTest.cpp
[ 30%] Linking CXX executable AttentionValueUTest
Scanning dependencies of target NodeUTest
[ 30%] Building CXX object tests/atomspace/CMakeFiles/NodeUTest.dir/NodeUTest.cpp.o
[ 30%] Built target AttentionValueUTest
[ 32%] Generating AtomUTest.cpp
[ 32%] Linking CXX executable VariablesUTest
Scanning dependencies of target AtomUTest
[ 32%] Building CXX object tests/atomspace/CMakeFiles/AtomUTest.dir/AtomUTest.cpp.o
In file included from /home/opencog/atomspace/build/tests/attentionbank/AttentionUTest.cpp:24:0:
/home/opencog/atomspace/build/tests/attentionbank/../../../tests/attentionbank/AttentionUTest.cxxtest: In member function 'void AttentionUTest::testGetRandomAtoms()':
/home/opencog/atomspace/build/tests/attentionbank/../../../tests/attentionbank/AttentionUTest.cxxtest:69:28: error: 'class opencog::AttentionBank' has no member named 'getRandomAtom'; did you mean 'getRandomAtomNotInAF'?
             Handle h = _ab.getRandomAtom();
                            ^~~~~~~~~~~~~
[ 32%] Built target VariablesUTest
[ 32%] Generating UseCountUTest.cpp
Scanning dependencies of target UseCountUTest
[ 33%] Building CXX object tests/atomspace/CMakeFiles/UseCountUTest.dir/UseCountUTest.cpp.o
tests/attentionbank/CMakeFiles/AttentionUTest.dir/build.make:66: recipe for target 'tests/attentionbank/CMakeFiles/AttentionUTest.dir/AttentionUTest.cpp.o' failed
make[3]: *** [tests/attentionbank/CMakeFiles/AttentionUTest.dir/AttentionUTest.cpp.o] Error 1
CMakeFiles/Makefile2:4469: recipe for target 'tests/attentionbank/CMakeFiles/AttentionUTest.dir/all' failed
make[2]: *** [tests/attentionbank/CMakeFiles/AttentionUTest.dir/all] Error 2
make[2]: *** Waiting for unfinished jobs....
[ 33%] Linking CXX executable AtomSpaceUtilsUTest
[ 33%] Built target AtomSpaceUtilsUTest
[ 33%] Linking CXX executable NodeUTest
[ 33%] Built target NodeUTest
[ 33%] Linking CXX executable ThreadSafeHandleMapUTest
[ 33%] Built target ThreadSafeHandleMapUTest
[ 33%] Linking CXX executable AtomUTest
[ 33%] Built target AtomUTest
[ 33%] Linking CXX executable UseCountUTest
[ 33%] Linking CXX executable MultiSpaceUTest
[ 33%] Built target UseCountUTest
[ 34%] Linking CXX executable RemoveUTest
[ 34%] Built target MultiSpaceUTest
[ 34%] Built target RemoveUTest
make[1]: *** [CMakeFiles/test.dir/rule] Error 2
make: *** [test] Error 2
CMakeFiles/Makefile2:106: recipe for target 'CMakeFiles/test.dir/rule' failed
Makefile:197: recipe for target 'test' failed
+ DSTATUS=TESTFAIL
+ /var/lib/jenkins/status/updateStatus TESTFAIL /var/lib/jenkins/jobs/OpenCOG_DebStab_AtomSpace/builds/22/log OpenCOG_DebStab_AtomSpace
Already up-to-date.
